--- a/index3.html
+++ b/index3.html
@@ -125,8 +125,8 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
-  <script src="spriteanimator.js"></script>
+  <script defer src="index.js"></script>
+  <script defer src="spriteanimator.js"></script>
   <script>
     // Sound shortcuts modal functionality
     document.addEventListener('DOMContentLoaded', function() {
