--- a/index3.html
+++ b/index3.html
@@ -93,13 +93,17 @@
       <p class="subtitle">Creative Coder & Digital Architect</p>
       
       <div class="currently-section">
-        Currently learning Three.js and drinking way too much coffee and energy drinks! Lord bless my heart.
+        Currently self learning animation and game development and drinking way too much coffee and energy drinks! Lord bless my heart.
       </div>
       
       <div class="contact-doodles">
         <a href="mailto:mashianemlb@gmail.com" class="contact-item">
           <span class="icon-doodle" style="--i: 0">📧</span>
           <span>mashianemlb@gmail.com</span>
+        </a>
+        <a href="https://masego-operating-system.netlify.app/" class="contact-item" target="_blank">
+          <span class="icon-doodle" style="--i: 1">💻</span>
+          <span>Favourite website</span>
         </a>
         <a href="https://github.com/MasegoMashiane" class="contact-item" target="_blank">
           <span class="icon-doodle" style="--i: 2">💻</span>
