--- a/index3.html
+++ b/index3.html
@@ -102,7 +102,7 @@
           <span>mashianemlb@gmail.com</span>
         </a>
         <a href="https://masego-operating-system.netlify.app/" class="contact-item" target="_blank">
-          <span class="icon-doodle" style="--i: 1">💻</span>
+          <span class="icon-doodle" style="--i: 1">🌐</span>
           <span>Favourite website</span>
         </a>
         <a href="https://github.com/MasegoMashiane" class="contact-item" target="_blank">
